[package]
name = "runner"
version = "0.1.0-dev+1.21.5"
edition = "2024"

[dependencies]
pumpkin.workspace = true
pumpkin-api-macros.workspace = true
pumpkin-data.workspace = true
pumpkin-protocol.workspace = true
pumpkin-registry.workspace = true
pumpkin-util.workspace = true
pumpkin-world.workspace = true

async-trait.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true

uuid.workspace = true

